# kwin-blur-ng

./: CMakeLists.txt  kwin-blur-ng.kdev4
protocols/: mbition-blur-v1.xml
src/: CMakeLists.txt  blur.cpp  blur.h  blur.kcfg  blurconfig.kcfgc  main.cpp  metadata.json  shaders.qrc
src/client/: CMakeLists.txt  blurbehind.cpp  blurbehind.h  blurbehindmask.cpp  blurbehindmask.h  blurclient.cpp  blurclient.h  shm.cpp  shm.h
src/scanner/: CMakeLists.txt
src/shaders/: upsample.frag  upsample_core.frag
src/wayland/: blurinterface.cpp  blurinterface.h
tests/: blurBehind.qml  blurBehindCircle.qml  blurBehindCircle2.qml  blurBehindDraggy.qml  blurBehindInvisibleChild.qml  blurBehindMaskCircle.qml  blurBehindTwo.qml  blurBehindUnload.qml  blurBehindUnloadTimer.qml
